test/visibility/except/typeExcept.good
typeExcept.chpl:5: error: 'foo' undeclared (first use this function)
